--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ jdk:
 script:
   - cd desapp-groupF-backend
   - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 && mvn test
+
+after_success:
+  - cd desapp-groupB-backend/
+  - mvn cobertura:cobertura
+  - mvn com.gavinmogan:codacy-maven-plugin:coverage -DcoverageReportFile=target/site/cobertura/coverage.xml 
