added a Basic test and jococo plugin in pom

--- a/desapp-groupF-backend/pom.xml
+++ b/desapp-groupF-backend/pom.xml
@@ -55,6 +55,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- Codacy coberture -->
+		<dependency>
+			<groupId>com.codacy</groupId>
+			<artifactId>codacy-coverage-reporter</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<!-- Codacy coberture -->
 	</dependencies>
 
 	<build>
@@ -118,6 +126,27 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
