--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
   - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 && mvn test
 
 after_success:
-  - cd desapp-groupB-backend/
+  - cd desapp-groupF-backend/
   - mvn cobertura:cobertura
   - mvn com.gavinmogan:codacy-maven-plugin:coverage -DcoverageReportFile=target/site/cobertura/coverage.xml 
