--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,12 @@ script:
   - cd desapp-groupF-backend
   - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 && mvn test
 
+
+before_install:
+	- sudo apt-get install jq
+	- wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r .assets[0].browser_download_url)
+		
 after_success:
   - cd desapp-groupF-backend/
   - mvn cobertura:cobertura
-  - mvn com.gavinmogan:codacy-maven-plugin:coverage -DcoverageReportFile=target/site/cobertura/coverage.xml
+	- java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r target/site/jacoco/jacoco.xml
