--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "buyfromhome",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.16.x",
+    "npm": "6.x"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
@@ -15,10 +19,11 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "react-start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "ng build --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
