--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^1.3.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "prop-types": "^15.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-google-location": "^1.2.2",
+    "react-mapbox-gl-geocoder": "4.2.0",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "viewport-mercator-project": "^6.0.0",
+    "react-map-gl": "^5.1.0",
+    "@mapbox/mapbox-gl-geocoder": "4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
