--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "4.2.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,12 +22,12 @@
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-google-location": "^1.2.2",
+    "react-map-gl": "^5.1.0",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "viewport-mercator-project": "^6.0.0",
-    "react-map-gl": "^5.1.0",
-    "@mapbox/mapbox-gl-geocoder": "4.2.0"
+    "react-split-pane": "^0.1.91",
+    "viewport-mercator-project": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
