--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "i18next": "^19.4.5",
+    "i18next-browser-languagedetector": "^4.2.0",
+    "i18next-http-backend": "^1.0.15",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^1.3.1",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -22,6 +25,7 @@
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-google-location": "^1.2.2",
+    "react-i18next": "^11.5.1",
     "react-map-gl": "^5.1.0",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
