--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-auth": "^1.4.0",
     "react-geocode": "^0.2.1",
     "react-google-location": "^1.2.2",
     "react-i18next": "^11.5.1",
@@ -35,7 +36,7 @@
     "viewport-mercator-project": "^6.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
