--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "prop-types": "^15.5.4",
     "react": "^16.13.1",
+    "react-csv-reader": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-facebook-auth": "^1.4.0",
     "react-geocode": "^0.2.1",
